<resources>
    <string name="TitleBeta">BETA</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_linux_on_dex">About Linux on DeX</string>
    <string name="about_linux_on_dex_description">Check the current version and legal information</string>
    <string name="adb_wifi">ADB Wi-Fi</string>
    <string name="always">Always</string>
    <string name="app_info">APP INFO</string>
    <string name="app_name">Linux on DeX Beta</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="browse">BROWSE</string>
    <string name="browse_image_body">Where would you like to browse your image from?</string>
    <string name="browse_image_desc">Select a Linux image from the list below to start creating a LoD container.</string>
    <string name="browse_image_title">Browse Image</string>
    <string name="button_resume_download">RESUME DOWNLOAD</string>
    <string name="cannot_create_container">Container cannot be created</string>
    <string name="cannot_create_container_desc">Something went wrong an a LoD container cannot be created. Please try again.</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close_app">CLOSE APP</string>
    <string name="confirm_container_shutdown">Are you sure you want to shutdown your container?</string>
    <string name="connect_on_low_memory">Connect on low memory?</string>
    <string name="contact_us_menu">Contact us</string>
    <string name="continue_setup">CONTINUE SET UP</string>
    <string name="cores">Cores</string>
    <string name="cpu_big">CPU_BIG</string>
    <string name="cpu_big_desc">Controls maximum number of Big cores available to your Linux container</string>
    <string name="cpu_little">CPU_LITTLE</string>
    <string name="cpu_little_desc">Controls maximum number of Little cores available to your Linux container</string>
    <string name="create_button">CREATE</string>
    <string name="default_file_name">File name goes here</string>
    <string name="default_path_name">File path goes here</string>
    <string name="delete_icon">Delete</string>
    <string name="delete_popup_title">Delete/Unmount image</string>
    <string name="delete_unmount_message">"Deleting a Linux image completely removes it from your device.

Unmounting a Linux image removes it from your LoD container list. You can still access this file."</string>
    <string name="description">Description</string>
    <string name="description_hint">My container</string>
    <string name="detail_name">Name</string>
    <string name="detail_toolbar_title">LoD CONTAINER DETAILS</string>
    <string name="details">Details</string>
    <string name="disclaimer"><u>Disclaimer</u></string>
    <string name="dismiss">DISMISS</string>
    <string name="download_fail_already_exist">The Linux image already exists.</string>
    <string name="download_fail_insufficient_storage">"There's insufficient storage. Delete files you no longer need and try again."</string>
    <string name="download_fail_title">"Download failed
"</string>
    <string name="download_from_server">DOWNLOAD FROM SERVER</string>
    <string name="download_pause_desc">Please check your Wi-Fi settings to resume the download. Either your Wi-Fi connection is weak or your mobile data has reached its limit.</string>
    <string name="download_pause_title">"Download paused
"</string>
    <string name="download_pending_title">"Download in queue
Please wait

"</string>
    <string name="downloading_complete_desc">Tap the button to unzip your file. Once unzipped, open the Linux on DeX app again, browse for your image and create a container with it.</string>
    <string name="downloading_complete_title">"Download complete
"</string>
    <string name="downloading_desc">You can still use Linux on DeX or any other application on your phone while your image is being downloaded.</string>
    <string name="downloading_title">"Downloading
"</string>
    <string name="edit_activity_description">Click on the fields below to edit text.</string>
    <string name="edit_description">All the fields below are editable. Simply click on one of the fields you want to adjust.</string>
    <string name="edit_icon">Edit</string>
    <string name="edit_toolbar_title">EDIT LoD CONTAINER</string>
    <string name="error_report">Send error reports</string>
    <string name="error_report_popup_body">Send error reports:</string>
    <string name="error_report_popup_description">"Your system log will be sent to Samsung Electronics Co., Ltd for analysis. Your system log may include information such as the version of Android you currently using and the build information of your phone. The system log data will only be used to analyze the problem and improve the application. 

"<b>Standard data rates apply. It is recommended that you connect to Wi-Fi when sending the log file to avoid charges.</b></string>
    <string name="faq">FAQ</string>
    <string name="just_this_time">Just this time</string>
    <string name="latest_version_info">BETA</string>
    <string name="linux_on_dex">Linux on DeX</string>
    <string name="lod_containers">LoD CONTAINERS</string>
    <string name="my_questions">My questions</string>
    <string name="no_lod_container">No LoD containers</string>
    <string name="no_lod_container_desc">Your containers will be shown here.</string>
    <string name="open_source_licenses"><u>Open source licenses</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="samsung_account">Samsung account</string>
    <string name="samsungaccount_agree">I have read and agree to all items and conditions above.</string>
    <string name="samsungaccount_button">SIGN IN</string>
    <string name="samsungaccount_description1">"PLEASE NOTE THAT THIS IS A BETA VERSION OF THE LINUX ON DEX WHICH IS STILL UNDERGOING FINAL TESTING BEFORE ITS OFFICIAL COMMERCIAL RELEASE. DUE TO TECHNICAL, LEGAL OR BUSINESS CONSIDERATIONS OF THIRD PARTY SERVICE PROVIDERS AND LICENSORS, OR FOR ANY OTHER REASON, LINUX ON DEX MAY END SERVICE AT ANY TIME WITHOUT PRIOR NOTIFICATION TO YOU.

Please use only the authorized image provided directly through Linux on DeX. Other versions or unauthorized images may not operate properly.

Linux on DeX currently supports customized Ubuntu image (Ubuntu 16.04 LTS version provided by Canonical) which only operates on select Samsung devices. Please visit ["<u><b>www.linuxondex.com</b></u>"] for the full list of compatible Samsung devices.
 "</string>
    <string name="samsungaccount_description2">" To operate properly, packages (apps and programs) must be built for ARM 64-bit and must comply with Android security policy
 ("<b>https://source.android.com/security/selinux/</b>").

If you have already consented to the collection of diagnostic and usage data, Linux on DeX will accordingly collect such data to improve the quality and performance of the services. You can disable this in your device Settings [Settings>General management>Report diagnostic info to Samsung].

Linux on DeX may slow down or suddenly be turned off in case of lack of memory. At least 15GB ROM and 4GB RAM is required in your device for downloading a Linux image. Additional storage may be required when installing additional packages (apps and programs).

LINUX ON DEX IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL SAMSUNG BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, INCLUDING WITHOUT LIMITATION, ANY DAMAGE TO COMPUTER SYSTEMS, HARDWARE OR SOFTWARE, LOSS OF DATA, OR ANY OTHER PERFORMANCE FAILURES, ANY ERRORS, BUGS, VIRUSES OR OTHER DEFECTS ARISING FROM, OUT OF OR IN CONNECTION WITH THE LINUX ON DEX OR THE USE OR OTHER DEALINGS THEREOF.
 "</string>
    <string name="samsungaccount_notice">Notice</string>
    <string name="samsungaccount_subtitle">Sign in to your Samsung account and get ready to enjoy the Linux on DeX experience.</string>
    <string name="samsungaccount_title">Sign in to your Samsung account</string>
    <string name="samsungaccount_viewmore"><u>VIEW MORE</u></string>
    <string name="tooltip_create_a_lod_container">Create a LoD container</string>
    <string name="update">UPDATE</string>
    <string name="virtual_key_ctrl">Ctrl</string>
    <string name="virtual_key_down">↓</string>
    <string name="virtual_key_esc">Esc</string>
    <string name="virtual_key_fn">Fn</string>
    <string name="virtual_key_left">←</string>
    <string name="virtual_key_right">→</string>
    <string name="virtual_key_tab">Tab</string>
    <string name="virtual_key_up">↑</string>
</resources>