<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/LightTheme.dialog_background_contents_area_background" android:layout_width="fill_parent" android:layout_height="45.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/esc_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_esc" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/tab_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_tab" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/ctrl_button" android:background="@drawable/virtual_key_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_ctrl" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/fn_button" android:background="@drawable/virtual_key_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_fn" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/left_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_left" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/down_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_down" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/up_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_up" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
    <Button android:textSize="12.0sp" android:textColor="@color/LightTheme.bottom_bar_text" android:id="@id/right_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/virtual_key_right" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Activity.Button.TextButton.BorderlessTextButton" />
</LinearLayout>