<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/buttonLayout" android:paddingBottom="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" style="@style/Dialog">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/error_report_popup_description" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" style="@style/Dialog.Message" />
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/error_report_popup_body" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" style="@style/Dialog.Message" />
        <CheckBox android:textStyle="bold" android:id="@id/checkBox1" android:text="@string/always" android:paddingStart="10.0dip" style="@style/Activity.CheckBox" />
        <CheckBox android:textStyle="bold" android:id="@id/checkBox2" android:text="@string/just_this_time" android:paddingStart="10.0dip" android:layout_marginVertical="0.0dip" style="@style/Activity.CheckBox" />
    </LinearLayout>
</ScrollView>