<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center|top" android:orientation="vertical" android:id="@id/above" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/about_layout_empty_view_top" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:text="@string/linux_on_dex" style="@style/Activity.Text.About.AppName" />
            <Button android:textSize="15.0sp" android:textColor="@color/LightTheme.secondary_text" android:id="@id/about_app_info" android:background="@drawable/custom_app_info_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:minHeight="23.0dip" android:text="@string/app_info" android:textAllCaps="true" android:fontFamily="sec-roboto-condensed" android:textAlignment="center" />
            <TextView android:textSize="15.0sp" android:id="@id/about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" style="@style/Activity.Text.About.Text" />
            <TextView android:textSize="14.0sp" android:gravity="center" android:id="@id/about_version_info" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/latest_version_info" android:layout_marginHorizontal="24.0dip" style="@style/Activity.Text.About.Text" />
            <Button android:textSize="15.0sp" android:textColor="@color/LightTheme.white" android:ellipsize="end" android:id="@id/about_update_button" android:background="@drawable/custom_about_update_button_bg" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:minHeight="40.0dip" android:text="@string/update" android:maxLines="1" android:textAllCaps="true" android:fontFamily="sec-roboto-condensed" android:textAlignment="center" />
            <View android:id="@id/about_layout_empty_view_bottom" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/about_app_link_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/above" android:layout_alignParentBottom="true" android:layout_marginStart="24.0dip">
            <TextView android:textSize="15.0sp" android:textColor="@color/LightTheme.title_text" android:id="@id/about_disclamer_button" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer" android:textAlignment="center" style="@style/Activity.Text.ItemTitle" />
            <TextView android:textSize="15.0sp" android:textColor="@color/LightTheme.title_text" android:id="@id/about_privacy_policy" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/privacy_policy" android:textAlignment="center" style="@style/Activity.Text.ItemTitle" />
            <TextView android:textSize="15.0sp" android:textColor="@color/LightTheme.title_text" android:id="@id/about_open_source_licenses_button" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/open_source_licenses" android:textAlignment="center" style="@style/Activity.Text.ItemTitle" />
            <View android:id="@id/about_app_link_layout_empty_view_bottom" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>