<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/myQuestions" android:background="?android:selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="19.0sp" android:textColor="@color/LightTheme.title_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/my_questions" />
        <View android:background="@color/LightTheme.divider" android:layout_width="wrap_content" android:layout_height="@dimen/line_height" android:layout_marginTop="10.0dip" android:alpha="1.0" android:layout_alignParentEnd="true" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/faq" android:background="?android:selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="19.0sp" android:textColor="@color/LightTheme.title_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/faq" />
        <View android:background="@color/LightTheme.divider" android:layout_width="wrap_content" android:layout_height="@dimen/line_height" android:layout_marginTop="10.0dip" android:alpha="1.0" android:layout_alignParentEnd="true" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/contactUs" android:background="?android:selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="19.0sp" android:textColor="@color/LightTheme.title_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/contact_us_menu" />
        <View android:background="@color/LightTheme.divider" android:layout_width="wrap_content" android:layout_height="@dimen/line_height" android:layout_marginTop="10.0dip" android:alpha="1.0" android:layout_alignParentEnd="true" />
    </LinearLayout>
</LinearLayout>